agrega cambios a js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DENTISUR | Clínica Dental</title>
 
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./sytle.css">
 
 </head>
 <body>
@@ -16,7 +16,7 @@
     <h1>Tu sonrisa, nuestra prioridad</h1>
     <p>Atención dental profesional con tecnología avanzada</p>
     <div>
-      <img src="./img/logo dentisur.png" alt="Imagen de odontología">
+      <img src="./img/logo.jpg" alt="Imagen de odontología">
     </div>
     <button>Reserva tu cita</button>
   </header>
@@ -79,7 +79,7 @@
       <button type="submit">Enviar</button>
     </form>
     <div>
-      <img src="./img/consulta.jpg" alt="Consulta odontológica">
+      <img src="./img/consulta.png" alt="Consulta odontológica">
     </div>
   </section>
 
