agrega cambios a entrega

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -20,6 +19,25 @@
     </div>
     <button>Reserva tu cita</button>
   </header>
+
+  <!-- Sección de Reserva de Citas -->
+  <section id="reserva-citas">
+    <h2>Reserva tu Cita</h2>
+    <div class="formulario-cita">
+      <input type="text" id="nombre-paciente" placeholder="Tu nombre" required>
+      <select id="servicio-seleccion" required>
+        <option value="">Selecciona un servicio</option>
+        <option value="Implantología Oral">Implantología Oral</option>
+        <option value="Rehabilitación Oral">Rehabilitación Oral</option>
+        <option value="Ortodoncia">Ortodoncia</option>
+      </select>
+      <button id="agendar-cita">Agendar Cita</button>
+    </div>
+    <div id="citas-agendadas">
+      <h3>Citas Agendadas</h3>
+      <ul id="lista-citas"></ul>
+    </div>
+  </section>
 
   <!-- Sección de Servicios -->
   <section id="servicios">
@@ -63,7 +81,7 @@
       <footer>– Carlos Pérez</footer>
     </blockquote>
     <blockquote>
-      <p>“"Siempre quise tener una sonrisa más armónica, pero me daba un poco de temor iniciar un tratamiento de ortodoncia. En Dentisur me explicaron todas las opciones y me decidí por unos brackets estéticos que fueron muy discretos. Al mismo tiempo, me realizaron un diseño de sonrisa que incluyó un blanqueamiento y unas carillas en algunos dientes. ¡El cambio ha sido espectacular! No solo mi sonrisa se ve mucho mejor, sino que también me siento más seguro y feliz. La atención en Dentisur siempre fue excelente, muy amables y profesionales. ¡Recomiendo totalmente sus servicios!"”</p>
+      <p>"Siempre quise tener una sonrisa más armónica, pero me daba un poco de temor iniciar un tratamiento de ortodoncia. En Dentisur me explicaron todas las opciones y me decidí por unos brackets estéticos que fueron muy discretos. Al mismo tiempo, me realizaron un diseño de sonrisa que incluyó un blanqueamiento y unas carillas en algunos dientes. ¡El cambio ha sido espectacular! No solo mi sonrisa se ve mucho mejor, sino que también me siento más seguro y feliz. La atención en Dentisur siempre fue excelente, muy amables y profesionales. ¡Recomiendo totalmente sus servicios!"</p>
       <footer>– Ana Maria Gómez</footer>
     </blockquote>
   </section>
