--- a/index.html
+++ b/index.html
@@ -1,89 +1,47 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DENTISUR | Clínica Dental</title>
-
-  <link rel="stylesheet" href="./sytle.css">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Simulador de Citas Dentales</title>
+  <link rel="stylesheet" href="./sytle.css" />
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
+  <h1>Simulador de Citas Dentales</h1>
 
-  <!-- Hero / Encabezado -->
-  <header>
-    <h1>Tu sonrisa, nuestra prioridad</h1>
-    <p>Atención dental profesional con tecnología avanzada</p>
-    <div>
-      <img src="./img/logo.jpg" alt="Imagen de odontología">
-    </div>
-    <button>Reserva tu cita</button>
-  </header>
+  <h2>🦷 Servicios Dentales Disponibles</h2>
+<ul id="lista-servicios">
+  <li>🪥 Limpieza dental profesional</li>
+  <li>🦷 Extracción de muelas</li>
+  <li>😁 Blanqueamiento dental</li>
+  <li>🛠️ Ortodoncia </li>
+  <li>🔍 Consulta general</li>
+</ul>
 
-  <!-- Sección de Servicios -->
-  <section id="servicios">
-    <h2>Nuestros Servicios</h2>
-    <div class="Implante">
-      <img src="./img/implantologia.webp" alt="Servicio 1">
-      <h3>Implantología Oral</h3>
-      <p>Recupera la sonrisa y la funcionalidad con nuestros tratamientos de implantología oral.</p>
-    </div>
-    <div class="Rehabilitacion">
-      <img src="./img/rehabilitacion.jpg" alt="Servicio 2">
-      <h3>Rehabilitación Oral</h3>
-      <p>Carillas, blanqueamiento, contorneado dental y más. Nuestro diseño de sonrisa integral te ofrece la transformación que buscas.</p>
-    </div>
-    <div class="Ortodoncia">
-      <img src="./img/ortodoncia.png" alt="Servicio 3">
-      <h3>Ortodoncia</h3>
-      <p>Logra la sonrisa alineada y funcional que siempre has deseado con nuestros tratamientos de ortodoncia.</p>
-    </div>
-  </section>
+  <h2>Reservar cita</h2>
+  <form id="formulario-cita">
+    <label>Nombre:<br />
+      <input type="text" id="nombre" required />
+    </label><br /><br />
+    <label>Fecha:<br />
+      <input type="date" id="fecha" required />
+    </label><br /><br />
+    <label>Hora:<br />
+      <input type="time" id="hora" required />
+    </label><br /><br />
+    <label>Servicio:<br />
+      <select id="servicio" required>
+        <option disabled selected value="">Selecciona un servicio</option>
+      </select>
+    </label><br /><br />
+    <button type="submit">Reservar</button>
+  </form>
 
-  <!-- Sección Sobre Nosotros -->
-  <section id="nosotros">
-    <h2>Sobre Nosotros</h2>
-    <p> En Dentisur, con orgullo celebramos más de dos décadas dedicadas a cuidar la salud y la estética dental de nuestros pacientes en Envigado. Ofrecemos un portafolio completo de servicios especializados para que luzcas y sientas tu mejor sonrisa:
-        
-        Estética Dental: Transforma tu sonrisa con nuestros tratamientos de blanqueamiento, carillas y más.
-        Implantes y Rehabilitación Oral: Reemplaza dientes perdidos y recupera la funcionalidad total de tu boca.
-        Periodoncia y Endodoncia: Mantenemos tus encías sanas y salvamos tus dientes de infecciones profundas.
-        Nuestra experiencia y compromiso con la excelencia nos convierten en tu mejor elección para el cuidado integral de tu salud bucal. ¡Visítanos!</p>
-    <div>
-      <img src="./img/odontologo.jpg" alt="Equipo dental">
-    </div>
-  </section>
+  <h2>Cita reservada</h2>
+  <div id="cita-guardada"></div>
+  <button id="eliminar-cita" style="display: none;">Eliminar Cita</button>
 
-  <!-- Sección de Testimonios -->
-  <section id="testimonios">
-    <h2>Testimonios</h2>
-    <blockquote>
-      <p>"Durante años sufrí la incomodidad de tener varios dientes perdidos. Esto afectaba mi confianza al sonreír y también mi capacidad para comer bien. Finalmente, decidí buscar una solución y encontré a Dentisur. Desde la primera consulta, el equipo me transmitió mucha confianza y profesionalismo. El proceso de los implantes y la rehabilitación oral fue mucho más sencillo de lo que imaginaba, y el resultado ha sido increíble. ¡Ahora puedo sonreír sin complejos y disfrutar de mis comidas favoritas! Estoy inmensamente agradecido con Dentisur por devolverme mi calidad de vida." </p>
-      <footer>– Carlos Pérez</footer>
-    </blockquote>
-    <blockquote>
-      <p>“"Siempre quise tener una sonrisa más armónica, pero me daba un poco de temor iniciar un tratamiento de ortodoncia. En Dentisur me explicaron todas las opciones y me decidí por unos brackets estéticos que fueron muy discretos. Al mismo tiempo, me realizaron un diseño de sonrisa que incluyó un blanqueamiento y unas carillas en algunos dientes. ¡El cambio ha sido espectacular! No solo mi sonrisa se ve mucho mejor, sino que también me siento más seguro y feliz. La atención en Dentisur siempre fue excelente, muy amables y profesionales. ¡Recomiendo totalmente sus servicios!"”</p>
-      <footer>– Ana Maria Gómez</footer>
-    </blockquote>
-  </section>
-
-  <!-- Sección de Contacto -->
-  <section id="contacto">
-    <h2>Contacto</h2>
-    <form>
-      <input type="text" name="nombre" placeholder="Nombre" required>
-      <input type="email" name="email" placeholder="Email" required>
-      <input type="tel" name="telefono" placeholder="Teléfono">
-      <textarea name="mensaje" placeholder="Mensaje" required></textarea>
-      <button type="submit">Enviar</button>
-    </form>
-    <div>
-      <img src="./img/consulta.png" alt="Consulta odontológica">
-    </div>
-  </section>
-
-  <script src="./index.js"></script>
-
+  <script src="./index.js" defer></script>
 </body>
 </html>
