--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
   <div id="cita-guardada"></div>
   <button id="eliminar-cita" style="display: none;">Eliminar Cita</button>
 
-  <script src="./index.js" defer></script>
+  <script src="index.js" defer></script>
 </body>
 </html>
